# ResumeMatchAI

./: README.md  app.py  nixpacks.toml  pyproject.toml  replit.md  resumefit.db
attached_assets/: Pasted-Error-saving-analysis-psycopg2-errors-InvalidSchemaName-schema-np-does-not-exist-LINE-146-c-1750994091071_1750994091071.txt  content-1750994291289.md
utils/: database.py  docx_extractor.py  openai_service.py  pdf_extractor.py  resume_analyzer.py  text_processor.py
